添加部分锁的知识点

--- a/读书笔记/iOS高级笔记/知识小集00.md
+++ b/读书笔记/iOS高级笔记/知识小集00.md
@@ -257,6 +257,38 @@ block最常见的使用是异步回调的，也就是说不是顺序执行的，
 * block对于局部的对象类型，则是连同其所有权修饰符一起截获；所以这就导致了循环引用的可能性。
 #### block循环引用：
 由于block对局部对象类型的截获变量特性，所以就导致了可能存在的循环引用问题。如果对象类型是 _ _ strong类型的，那么block对其进行截获是会连同所有权修饰符一起截获，也就是说在block内部也是使用了一个 _ _ strong类型的变量强引用了它。所以这就导致了循环引用的问题。所以最好的解决方案就是对截获的变量使用  _ _ weak 的变量去替代它，其次常用的解决循环引用的方法就是断环。
+* 处理NSTimer导致的循环引用问题
+例如：当前类强引用了timer，timer又强引用了target。所以一般我们都考虑在当前类释放的时候， [ _ timer invalidate]; _ timer = nil; ，使用断环的方式处理循环引用。但是如果不太容易知晓在何处使用invalidate更好的情况下，怎么解除循环引用是一个难点。
+```
+_ timer = [NSTimer scheduledTimerWithTimeInterval:1.0f target:self selector:@selector(fire) userInfo:nil repeats:YES];
+-(void)fire{
+    NSLog(@"fire");
+}
+```
+解决方案：借助一个虚基类NSProxy,弱引用target
+```
+@interface FCFProxy : NSProxy
+@property (nonatomic,weak) id target;
+@end
+@implementation FCFProxy
+
+//获取当前的方法签名
+- (NSMethodSignature * ) methodSignatureForSelector:(SEL)sel
+{
+    return [self.target methodSignatureForSelector:sel];
+}
+//指定当前消息的处理者
+-(void)forwardInvocation:(NSInvocation * )invocation
+{
+    [invocation invokeWithTarget:self.target];
+}
+//执行
+_ hzProxy = [FCFProxy alloc];
+//当前Proxy的target设为当前的self，因为真正要处理消息的其实是当前的viewcontroller（其实这个target就相当于delegate）
+_ hzProxy.target  = self;
+_ timer = [NSTimer scheduledTimerWithTimeInterval:1.0f target: _ hzProxy selector:@selector(fire) userInfo:nil repeats:YES]; 
+当前 _ timer的对象的处理就变成了 _ hzProxy。
+```
 
 #### --block：
 什么是 _ _ block? 
@@ -334,12 +366,12 @@ q2：当一个对象被释放之后，weak变量是怎么被清理的。
 #### AutoreleasePool
 AutoreleasePool是用于对延迟释放的对象的内存管理。
 * 首先来看一下AutoreleasePool的内部结构:
-AutoreleasePool是一个以AutoreleasePoolPage为节点，的双向链表，同时它含有一个pthread的成员。在ARC中的实现流程是：当@autoreleasepool{}中，{开始的位置会被编译成AutoreleasePoolPagePush(),它会在当前栈中插入一个标志位，并且返回。在执行{}之间的代码时，会把对象插入进去，在}结束前，会把标志位做为入参执行AutoreleasePoolPagePop(xx),这个时候会给标志位之后的所有对象发送一个release消息，以释放无用的对象。
+AutoreleasePool是一个以AutoreleasePoolPage为节点的双向链表，同时它含有一个pthread的成员。在ARC中的实现流程是：当@autoreleasepool{}中，{开始的位置会被编译成AutoreleasePoolPagePush(),它会在当前栈中插入一个标志位，并且返回。在执行{}之间的代码时，会把当前生成的对象插入进去，在}结束前，会把标志位做为入参执行AutoreleasePoolPagePop(xx),这个时候会给标志位之后的所有对象发送一个release消息，以释放无用的对象。
 * 注意：
 因为AutoreleasePool的数据结构实际是以标志位插入的方式来实现的，所以无论有多少层嵌套，都只是对标志位进行操作而已。
 
 * AutoreleasePool与runloop的关系及内存管理：
-AutoreleasePool与线程是一一对应的关系，那么它与runloop自然也是一一对应的关系。在runloop发出CFRunLoopEntry通知的时候，会执行一个AutoreleasePagePush()函数，创建一个AutoreleasePool，然后runloop的事件循环中（因为runloop是在entry之后才开启事件循环的），如果监听到了kCFRunLoopBeforeWaiting通知，会先执行AutoreleasePagePop()然后再执行AutoreleasePagePush()，相当于释放旧的AutoreleasePool，创建新的AutoreleasePool。然后在runloop退出前，即接收到KCFRunLoopExit通知时，再执行AutoreleasePagePop()释放掉AutoreleasePool。所以从这里可以看出，在Runloop的每一次事件循环期间，也是会对标志位直接的每一个对象发送一次release的，以及时释放掉无用的对象。
+AutoreleasePool与线程是一一对应的关系，那么它与runloop自然也是一一对应的关系。在runloop发出CFRunLoopEntry通知的时候，会执行一个AutoreleasePagePush()函数，创建一个AutoreleasePool，然后runloop的事件循环中（因为runloop是在KCFRunLoopBeforObserver后才开启事件循环的），如果监听到了kCFRunLoopBeforeWaiting通知，会先执行AutoreleasePagePop()然后再执行AutoreleasePagePush()，相当于释放旧的AutoreleasePool，创建新的AutoreleasePool。然后在runloop退出前，即接收到KCFRunLoopExit通知时，再执行AutoreleasePagePop()释放掉AutoreleasePool。所以从这里可以看出，在Runloop的每一次事件循环期间，也是会对标志位直接的每一个对象发送一次release的，以及时释放掉无用的对象。
 
 
 ### 锁与多线程
@@ -706,22 +738,20 @@ NSOperation可以添加依赖、优先级、最大并发量，操作可以控制
 GCD则有栅栏、group、信号量、单例、延时执行等。在暂停、取消、最大并发量这些操作更不容易实现。
 
 #### 锁
-* 自旋锁 OSSpinLock 存在优先级反转的问题。就是等待线程的优先级更高，会一直占用CPU，优先级低的线程就无法释放锁；
+锁主要可以分为三大类：**信号量**、**互斥锁**、**自旋锁**：
+* 信号量查看GCD相关知识点；
+* phread_mutex是互斥锁，互斥锁在访问被锁的资源时，调用者线程会休眠，此时CPU可以调度其他线程工作，直播被锁资源释放，此时线程才会被唤醒。
+pthread_mutex可以传入不同参数，实现递归锁pthread_mutex(recursive)。
+其次NSLock、NSCondition、NSRecursiveLock、NSConditionLock都是内部封装的pthread_mutex,都属于互斥锁。@synchronize是NSLock的封装，牺牲了效率，简洁了语法。
+* OSSpinLock是自旋锁，自旋锁是忙等的锁，被访问资源被锁时，线程不会休眠，而是不停地循环等待，直到被锁资源被释放。自旋锁效率较高，但是存在优先级反转的问题：就是等待线程的优先级更高，会一直占用CPU，优先级低的线程就无法释放锁；
 
 * os_unfair_lock 用来替换OSSpinLock，但是它并非忙等的锁；
-
 * pthread_mutex 互斥锁，等待线程时会进行休眠。它同时含有多种锁，比如pthread_mutex—递归锁、pthread_mutex—条件锁；
-
 * NSLock是对pthread_mutex 普通锁的封装；
-
 * NSRecursiveLock是对pthread_mutex—递归锁的封装；
-
 * NSCondition是对phread_mutex—条件锁的封装；
-
 * NSConditionLock是对NSCondition的又一层封装；
-
 * @synchronized是对pthread_mutex—递归锁的封装；
-
 
 [锁的具体实现](https://hnxczk.github.io/blog/articles/locks.html#%E6%80%A7%E8%83%BD)
 
