优化Autoreleasepool知识点

--- a/读书笔记/iOS高级笔记/知识小集00.md
+++ b/读书笔记/iOS高级笔记/知识小集00.md
@@ -366,7 +366,7 @@ q2：当一个对象被释放之后，weak变量是怎么被清理的。
 #### AutoreleasePool
 AutoreleasePool是用于对延迟释放的对象的内存管理。
 * 首先来看一下AutoreleasePool的内部结构:
-AutoreleasePool是一个以AutoreleasePoolPage为节点的双向链表，同时它含有一个pthread的成员。在ARC中的实现流程是：当@autoreleasepool{}中，{开始的位置会被编译成AutoreleasePoolPagePush(),它会在当前栈中插入一个标志位，并且返回。在执行{}之间的代码时，会把当前生成的对象插入进去，在}结束前，会把标志位做为入参执行AutoreleasePoolPagePop(xx),这个时候会给标志位之后的所有对象发送一个release消息，以释放无用的对象。
+AutoreleasePool是一个以AutoreleasePoolPage为节点的双向链表，同时它含有一个pthread的成员。AutoreleasePoolPage是一个栈结构，它里面有一个next指针。在ARC中的实现流程是：当@autoreleasepool{}中，{开始的位置会被编译成AutoreleasePoolPagePush(),它会在当前page栈中插入一个标志位，并且返回。在执行{}之间的代码时，会把当前生成的对象依从插入到next指针的位置，next指针在栈中依从往栈顶走，当栈满了的时候，就会生成下一个page，在}结束前，会把标志位做为入参执行AutoreleasePoolPagePop(xx),这个时候就会给标志位与next指针之间的对象依次发送release消息，然后复位next指针位置。
 * 注意：
 因为AutoreleasePool的数据结构实际是以标志位插入的方式来实现的，所以无论有多少层嵌套，都只是对标志位进行操作而已。
 
