优化load、initialize知识点

--- a/读书笔记/iOS高级笔记/知识小集00.md
+++ b/读书笔记/iOS高级笔记/知识小集00.md
@@ -113,6 +113,8 @@ category是在运行时方法objc_init添加进类当中的，根据运行时方
 
 在runtime源码中我们可以看到一个AssociationsManager单例，它负责维护一个静态变量AssociationHasMap。也就是说我们创建的每一个类的关联对象都放在这同一个容器中。这个map以key为键值，以其他三个参数组成的结构体为value进行赋值。这样正好解决了内存布局的问题。
 
+* 注意：accosiation的移除问题，association的objc_removeAssociationObjects接口是移除某个对象的所有关联对象，如果要移除单个关联对象，则还是应该使用objc_setAssociationObjec传入nil来达到移除目的。
+
 #### 通知
 通知是使用观察者模式实现的，主要用于跨层传递消息。可以一对多进行传递。
 通知的底层实现应该和关联对象的实现方式类似。主要由通知中心NSNotificationCenter管理一个Map表。Map表的key值是notifIctionName，value是一个列表。列表中的每个元素就是观察者、参数、方法等参数。
@@ -138,8 +140,9 @@ category是在运行时方法objc_init添加进类当中的，根据运行时方
 A *a = [[A alloc]init];
 [a setClass:[B class]];
 ```
-* **+load**：每个类和分类都有load方法，它是在类被引进项目的时候（在main函数开始执行之前）自动被调用的，并且都会被调用一遍。
-与initialize的区别：initialize是在类或子类的第一个方法被调用前调用，也就是说没有使用的类不会被调用；如果类和分类都实现了initialize方法，则只有最后编译的category的initialize方法会被调用。
+* **+load VS +initialize**：
+	* +load：在APP启动时，会在main函数之前加载所有的类，load函数就是在这个时候被调用的,每个类和分类都有load方法，并且都会被调用一遍。我们一般在这个函数里执行一些Runtime的方法；
+	* +initialize：initialize是在第一次初始化这个类之前被调用。也就是在我们第一次使用init之前被调用，类似于懒加载的效果，如果有多个初始化实例，那么这个函数也只会被调用1次。如果类和分类都实现了initialize方法，则只有最后编译的category的initialize方法会被调用。系统用它来初始化静态变量。
 
 ### Runtime
 我们知道OC是在C语言基础之上开发的。编译的时候，OC无法直接编译为汇编语言，而是需要先转成C语言再进行编译。而从OC到C的过度就是由runtime实现的。所以可以说runtime是OC的运行环境，它是OC在C的基础上实现面向对象和动态机制的基石。
@@ -390,7 +393,7 @@ NSThread * thread = [[NSThread alloc] initWithTarget:self selector:@selector(xxx
 ```
 * performSelector 含有thread的API可以隐式开启线程。但是其含有delay的API则是使用了线程中对应runloop的Timer，需要开启NSRunLoop才能运行
 ```
-[self performSelectorInBackgroundL@selector(xx) withObjct:nil];
+[self performSelectorInBackground@selector(xx) withObjct:nil];
 ```
 #### GCD
 GCD是一个多核并行运算的解决方案，它可以自动管理线程的生命周期，只需要告诉GCD干什么就行。
@@ -824,28 +827,29 @@ operaB.addDependency(operaA)
 * 4、等到事件出队后，就开始寻找最佳响应者的过程；
 * 5、寻找到最佳响应者之后，接下来的事情便是事件在响应链中的传递及响应了；
 ##### 寻找最佳响应者
-1、事件出队后，UIApplication首先将其传递给UIWindow，如果存在多个Window，则优先传给后显示的window；
-2、若该window不能响应事件，则将事件传递给其他window。若该window能响应事件，则从后往前询问窗口子视图；
-3、子视图中，若能响应，则自下而上传递，若其子视图不响应，则自身是最合适的响应者。若不能响应，则传递给其同级的前一个兄弟视图；
-4、找到最佳响应者后，然后将其回溯返回给UIWindow。
-5、找到最佳响应者后，则开始将事件在响应链中进行传递。**注意**前面步骤的传递是自下而上（window到最佳响应者）地传递，为了找到最佳响应者。而这里的事件传递则是将直接在响应链中传递，以便将事件进行响应，这是自上而下（最佳响应者向UIWindow传递）进行的；
-6、每个响应者都有4个默认实现的响应事件触摸的方法：touchBegan:withEvent:、touchMoved:withEvent:、touchEnded:withEvent:、touchCancelled:withEvent:。所以可以在这些方法中对事件进行拦截做一些额外的处理。**touchBegan:withEvent也正是事件在响应链中的传递方式**；所以重写touchBegan:withEvent也能够让事件不再往下传递。
+* 1、事件出队后，UIApplication首先将其传递给UIWindow，如果存在多个Window，则优先传给后显示的window；
+* 2、若该window不能响应事件，则将事件传递给其他window。若该window能响应事件，则从后往前询问窗口子视图；
+* 3、子视图中，若能响应，则自下而上传递，若其子视图不响应，则自身是最合适的响应者。若不能响应，则传递给其同级的前一个兄弟视图；
+* 4、找到最佳响应者后，然后将其回溯返回给UIWindow。
+* 5、找到最佳响应者后，则开始将事件在响应链中进行传递。**注意**前面步骤的传递是自下而上（window到最佳响应者）地传递，为了找到最佳响应者。而这里的事件传递则是将直接在响应链中传递，以便将事件进行响应，这是自上而下（最佳响应者向UIWindow传递）进行的；
+* 6、每个响应者都有4个默认实现的响应事件触摸的方法：touchBegan:withEvent:、touchMoved:withEvent:、touchEnded:withEvent:、touchCancelled:withEvent:。所以可以在这些方法中对事件进行拦截做一些额外的处理。**touchBegan:withEvent也正是事件在响应链中的传递方式**；所以重写touchBegan:withEvent也能够让事件不再往下传递。
 
-* 如何判断是否能响应？
+###### 如何判断是否能响应？
 每个UIView都有一个hitTest:withEvent方法，该方法返回一个能响应的UIView对象。比如：事件传递到UIWindow，UIWindow执行hitTest:withEvent:判断自身能否响应事件，若可以，则调用子视图的hitTest:withTest:将事件传递给子视图，并在子视图中查找最佳响应者。找到了之后就回溯给UIApplication一个最佳响应者视图。
 hitTest:withEvent:方法的判断标准包括：是否允许交互、是否隐藏、透明度是否小于0.01，若这三个条件都通过，则会判断触摸点是否在当前视图的坐标系范围内。
-* 如何判断触摸点是否在当前视图坐标系范围内？
-pointINside:withEvent:方法用于判断触摸点是否在自身坐标范围内，返回一个bool值。注意的是次判断的时候都得以自身坐标系为准，所以应当使用covertPoint:toView:先进行坐标系转换。所以一般项目中碰到扩大按钮点击区域、tabBar凸出的按钮点击不响应等问题，则可以重写pointInside:withEvent:方法。
-* 知道最佳响应者后，事件如何继续沿着响应链传递？
-首先每个响应者都有一个nextResponder方法，用于将事件传递下一个响应者：若UIView是视图控制器的根视图，则其nextResponder是视图控制器，否则其nextResponder是其父视图；若视图控制器是window的根控制器，则其nextResponder是UIWindoi，否则是其前一个控制器；UIWindow的nextResponder是UIApplication；UIApplication的nextResponder是AppDelegate。
-所以一旦找到最佳响应者后，整个响应链也就确定了。然后UIApplication会将事件通过sendEvent根据UITouch绑定的window传递给对应的UIWindow，UIWindow同样使用sendEvent通过UITouch绑定的touch对象将事件传递给hitTestView。
 
-* UIResponder、UIGestureRecognizer、UIControl同时存在时，会怎么响应？
-	* **手势识别器比UIResponder的响应优先级更高**。Window在将事件传递给最佳响应者之前，会将事件先传递给最佳响应者视图对应的视图控制器的手势识别器中。若手势识别器成功识别了事件，就Application会取消最佳响应者对对事件的响应；
-	* 手势识别器UIGestureRecognizer同样通过那4个touch方法来判断是否接收事件的；
-	* Window先将绑定了触摸对象的事件传递给触摸对象绑定的手势识别器，然后再发送给最佳响应者对应的hitTestView；手势识别器识别手势期间，若触摸对象的触摸状态发生了变化，事件会先发送给手势识别器，再发送给hitTestView；手势识别器若成功识别了手势，则会通知UIApplication取消hitTestView对事件的响应；若手势识别器未能识别手势，此时触摸接收，则停止向手势识别器发送事件，仅向hitTestView发送事件；所手势识别器未能识别手势，且此时触摸已结束，则向hitTestView发送end状态以停止对事件进行响应。
-将手势识别器的delaysTouchesBegan属性置为YES表示是否在手势识别期间截断事件，不将事件发送给hitTestView；
-	* **UIControl比手势识别器的响应优先级更高**。比如UIButton。
+###### 如何判断触摸点是否在当前视图坐标系范围内？
+  pointINside:withEvent:方法用于判断触摸点是否在自身坐标范围内，返回一个bool值。注意的是次判断的时候都得以自身坐标系为准，所以应当使用covertPoint:toView:先进行坐标系转换。所以一般项目中碰到扩大按钮点击区域、tabBar凸出的按钮点击不响应等问题，则可以重写pointInside:withEvent:方法。
+###### 知道最佳响应者后，事件如何继续沿着响应链传递？
+  首先每个响应者都有一个nextResponder方法，用于将事件传递下一个响应者：若UIView是视图控制器的根视图，则其nextResponder是视图控制器，否则其nextResponder是其父视图；若视图控制器是window的根控制器，则其nextResponder是UIWindoi，否则是其前一个控制器；UIWindow的nextResponder是UIApplication；UIApplication的nextResponder是AppDelegate。
+  所以一旦找到最佳响应者后，整个响应链也就确定了。然后UIApplication会将事件通过sendEvent根据UITouch绑定的window传递给对应的UIWindow，UIWindow同样使用sendEvent通过UITouch绑定的touch对象将事件传递给hitTestView。
+
+###### UIResponder、UIGestureRecognizer、UIControl同时存在时，会怎么响应？
+  * **手势识别器比UIResponder的响应优先级更高**。Window在将事件传递给最佳响应者之前，会将事件先传递给最佳响应者视图对应的视图控制器的手势识别器中。若手势识别器成功识别了事件，就Application会取消最佳响应者对对事件的响应；
+  * 手势识别器UIGestureRecognizer同样通过那4个touch方法来判断是否接收事件的；
+  * Window先将绑定了触摸对象的事件传递给触摸对象绑定的手势识别器，然后再发送给最佳响应者对应的hitTestView；手势识别器识别手势期间，若触摸对象的触摸状态发生了变化，事件会先发送给手势识别器，再发送给hitTestView；手势识别器若成功识别了手势，则会通知UIApplication取消hitTestView对事件的响应；若手势识别器未能识别手势，此时触摸接收，则停止向手势识别器发送事件，仅向hitTestView发送事件；所手势识别器未能识别手势，且此时触摸已结束，则向hitTestView发送end状态以停止对事件进行响应。
+    将手势识别器的delaysTouchesBegan属性置为YES表示是否在手势识别期间截断事件，不将事件发送给hitTestView；
+  * **UIControl比手势识别器的响应优先级更高**。比如UIButton。
 
 [触摸事件全家桶](https://www.jianshu.com/p/c294d1bd963d)
 
