优化http知识点部分

--- a/读书笔记/iOS高级笔记/知识小集00.md
+++ b/读书笔记/iOS高级笔记/知识小集00.md
@@ -910,10 +910,12 @@ Q3 、怎么保证可靠传输的？
 确认迟到：指确认报文迟到了，客户端同样会进行确认丢失一样的操作。
 
 Q4、面向字节流?
-是指TCP并不是原封不动地将发送方发送的字节一次性地完全地传输给接收方，而是会根据实际情况对字节流进行拆分或合并，然后再进行发送。和UDP的面向报文的方式正好相反。
+是指TCP并不是原封不动地将发送方发送的字节一次性地完全地传输给接收方，而是会根据实际情况对字节流进行**拆分或合并**，然后再进行发送。和UDP的面向报文的方式正好相反。
 
 Q5、怎么做到流量控制、按序到达？
-通过滑动窗口协议实现。TCP的发送缓存当中的数据都有字节编号，然后我们进行排序。将每次发送出去后收到的确认报文位置进行标记，将将要发送的字节流中的最后字节进行标记。然后这大概就是字节流中的一个小的字节窗口。但是为了避免接收方数据溢出，所以接收方需要动态调节发送方的窗口大小来控制发送速率（比如接收方只能接收2个字节了，那么发送方就最多只能发送2个字节。这个应该是放在报文的首部字段）。同样的，接收缓存中也会对已接收的字节进行排序，它会对按序到底的下一个期望到达的字节进行标记（比如已经接收了1、2、3字节，那么期望标记就是第4个字节，而返回给长层应用程序的字节就是这些已按序到底的字节部分，那比如说还接收到了第6个字节，则暂时不会进行处理。）。所以呢，这个滑动窗口协议就可以进行流量控制和按序到达了。
+通过滑动窗口协议实现。TCP的发送方和接收方都有一个缓存区域，缓存区域的数据都是有序的，可以把它当作是有顺序编号的。在发送方，有一个类似滑动窗口用于从缓存数据里取一个有序序列往接收方发送；为了避免接收方数据溢出或因网络问题导致大数据无法发送，接收方在每一次接收完成后会在确认报文里返回一个数据，告诉发送方当前可以接收的数据。同时发送方在每次发送完成收到确认报文后会将已发送的最后字节标记，然后按照确认报文里的数据来确定滑动窗口的大小，比如说缓存区有1~9个数据，1~5是已经发送完成的，这个时候接收方接收到前三个数据后，表示由于网络环境较差，只能接收2个字节，那么就会在确认报文里返回2，这样滑动窗口的大小就变成了2。一句话说就是通过接收方来动态调节发送方的发送速率。这样就可以做到流量控制！
+
+同样的，接收方的缓存区，如果接受到了1、2、3、6编号的数据，那么它只会对按序到底的下一个期望到底的字节进行标记，这里也就是4，而往应用层发送已排序好的1、2、3序列部分，那如果后面又接收到了非期望值的数据，则不会处理。这样就做到了按序到底！
 
 Q6、拥塞控制：
 慢开始、拥塞避免：一开始先发送一个报文，如果没有发送拥塞，则翻倍发送2个，然后再4个、16个(指数增长的方式)。一直达到窗口的门限初始值为止；然后再通过拥塞避免的策略，以线性增长的方式发送报文，可能达到某个值得时候，就产生了网络拥塞（比如连续3个报文没有收到确认报文），此时就越高采用拥塞避免的乘法减小的策略，只发送一个报文，同时将门限值降低，然后重新开始“慢开始”。
