--- a/读书笔记/iOS高级笔记/知识小集00.md
+++ b/读书笔记/iOS高级笔记/知识小集00.md
@@ -1115,7 +1115,7 @@ print(result)
 而负责动画操作的则是CALayer，CALayer的作用主要是为了内容展示和动画操作。
 #### 逐帧 和 关键帧
 iOS的动画主要分为两大类：逐帧动画 和 关键帧动画：
-##### 逐帧动画：就是讲过程中的每一帧画面进行绘制
+##### 逐帧动画：就是对过程中的每一帧画面进行绘制
 实现方式就是周期性地调用绘制方法，绘制每帧的动画对象。这里的周期性使用的是CADisplayerLink，即屏幕每次刷新都进行调用。
 ##### 关键帧动画：理论上就是提供关键节点，比如起始点、中间点、终点等关键位置，其他的过度位置就交由计算机自动生成。
 一般我们提供起始帧、结束帧、动画时间、匀速运动；起始帧和结束帧是我们设定的，其他的过渡帧是系统生成的。CALayer的同一个属性值，会分别保存在模型层和展示层。当我修改一个属性值时，修改的是模型层的数值，动画时系统根据模型层的变化生成过渡值，将其保存在展现层中。执行的过程：
@@ -1192,7 +1192,7 @@ clang -S xx.i -o xx.s
 * 语法分析：生成抽象语法树AST。比如运算符优先级、括号匹配等；
 * 静态分析：主要类型声明与匹配的问题。比如整形与字符串相加肯定会报错；
 * 中间语言生成：这里是指根据AST自顶向下生成LLVM的IR语言（它是区别与源码和机器码的一种中间代码）
-* 目标代码生成：根据IR生成依赖具体机器的汇编语言（Mach-O文件）。
+* 目标代码生成：根据IR生成依赖具体机器的汇编语言。
 ##### 3、**汇编**：把上面得到的.s文件里的汇编指令翻译成机器指令
 ```
 clang -C xx.s -o xx.o
