--- a/读书笔记/爬山日志/2020QQ音乐（卒）.md
+++ b/读书笔记/爬山日志/2020QQ音乐（卒）.md
@@ -3,7 +3,7 @@
 * 在项目里都做了哪些卡顿的优化？（理论被断掉了，直接说自己做了哪些处理？）
 * 卡顿是怎么做的检测？为什么还要自己写检测工具？那检测的过程中是怎么定位到具体的方法的？
 * 主线程的卡顿是怎么检测到的？为什么要单独写一个CADisplayLink检测主线程上的帧率，如果是主线程已经卡顿的情况下岂不是会加重卡顿？
-* 为什么要使用RunLoop做卡顿优化？一开始加载数据的时候岂不是没法使用？
+* 为什么要使用RunLoop做卡顿优化？一开始加载数据的时候岂不是没法使用？（简历里的坑）
 * 在项目里是如何检测Crash的，降低崩溃率都做了哪些事情？
 * Bugly的检测原理是什么？
 * 是否了解直播的一些底层原理？还是说只停留在SDK的使用过程？
@@ -14,6 +14,8 @@
 不过最主要的是自己对知识点里的细节没有把握清楚。主要就是CADisplayLink检测主线程、runloop为什么用来优化tableview，是怎么做的。木有说清楚。
 
 
+
+学习及回答技巧的思考：一碰到说哪个APP更难的
 
 
 
