优化部分知识点

--- a/读书笔记/爬山日志/2020QQ音乐（卒）.md
+++ b/读书笔记/爬山日志/2020QQ音乐（卒）.md
@@ -13,9 +13,10 @@
 
 不过最主要的是自己对知识点里的细节没有把握清楚。主要就是CADisplayLink检测主线程、runloop为什么用来优化tableview，是怎么做的。木有说清楚。
 
+#### 回答
+首先自己学习的时候就未搞清楚
 
 
-学习及回答技巧的思考：一碰到说哪个APP更难的
 
 
 
