优化知识点

--- a/读书笔记/iOS高级笔记/知识小集01.md
+++ b/读书笔记/iOS高级笔记/知识小集01.md
@@ -198,6 +198,14 @@ iOS 10之后，UITableView和CollectionView都提供了一个预加载的接口:
 [image/io](<https://zhuanlan.zhihu.com/p/30591648>)
 
 
+
+[图片渲染相关](<https://lision.me/ios-rendering-process/>)
+
+[ios绘制](<https://segmentfault.com/a/1190000000390012>)
+
+
+
+
 #### SDWebImage：
 
 ##### 源码架构与基础流程
@@ -283,17 +291,33 @@ iOS 10之后，UITableView和CollectionView都提供了一个预加载的接口:
 ##### CPU使用监测
 原理：CPU长时间处于高消耗的状态，会使手机发热，耗电量加剧，导致APP产生卡顿。所以要对APP的CPU使用进行监测；
 方案就是：使用task_thread函数，获取当前APP所有的线程列表，然后遍历每一个线程，通过thread_info函数获取每一个非闲置线程的cpu使用。
+
 ```
 + (CGFloat)cpuUsageForApp {
     kern_return_t kr;
-    thread_array_t         thread_list;
-    mach_msg_type_number_t thread_count;
+    thread_array_t         thread_list; // mach_port_t 类似的指针数组，用于存放从线程
+    mach_msg_type_number_t thread_count; //unsigned int 存放获取的线程数
     thread_info_data_t     thinfo;
     mach_msg_type_number_t thread_info_count;
+    /*
+         线程基本信息：thread_basic_info_t
+         struct thread_basic_info {
+             time_value_t    user_time;  //用户运行时长
+             time_value_t    system_time;  //系统运行时长
+             integer_t       cpu_usage;  //cpu使用率，应该是指占整体的百分百
+             policy_t        policy;     //调度策略
+             integer_t       run_state;   //运行状态
+             integer_t       flags;        //各种标记
+             integer_t       suspend_count;  //暂停线程时的计数，不知道有啥用
+             integer_t       sleep_time;    //休眠时长
+         };
+         */
     thread_basic_info_t basic_info_th;
     
     // get threads in the task
     //  获取当前进程中 线程列表
+    //  mach_task_self() 返回 mach_port_t 类型，应该是指当前进程
+    // c语言中引用一般是用于做返回值的，所以这个函数的作用就是从当前进程中获取所有线程数组，及线程数。返回是否成功的Bool值（C语言中非0就是true）。
     kr = task_threads(mach_task_self(), &thread_list, &thread_count);
     if (kr != KERN_SUCCESS)
         return -1;
@@ -302,16 +326,16 @@ iOS 10之后，UITableView和CollectionView都提供了一个预加载的接口:
     
     for (int j = 0; j < thread_count; j++) {
         thread_info_count = THREAD_INFO_MAX;
-        //获取每一个线程信息
+        //thread_info用来获取当前这个线程的具体信息。
         kr = thread_info(thread_list[j], THREAD_BASIC_INFO,
                          (thread_info_t)thinfo, &thread_info_count);
         if (kr != KERN_SUCCESS)
             return -1;
         
         basic_info_th = (thread_basic_info_t)thinfo;
+        //这个与操作就是判断线程是否是一个空闲线程
         if (!(basic_info_th->flags & TH_FLAGS_IDLE)) {
-            // cpu_usage : Scaled cpu usage percentage. The scale factor is TH_USAGE_SCALE.
-            //宏定义TH_USAGE_SCALE返回CPU处理总频率：
+            //宏定义TH_USAGE_SCALE返回CPU处理总频率 
             tot_cpu += basic_info_th->cpu_usage / (float)TH_USAGE_SCALE;
         }
         
