--- a/读书笔记/爬山日志/2020QQ音乐（卒）.md
+++ b/读书笔记/爬山日志/2020QQ音乐（卒）.md
@@ -14,10 +14,37 @@
 不过最主要的是自己对知识点里的细节没有把握清楚。主要就是CADisplayLink检测主线程、runloop为什么用来优化tableview，是怎么做的。木有说清楚。
 
 #### 回答
-首先自己学习的时候就未搞清楚
+1、我目前做过的所有项目，都是偏业务层的，对应直播、IM这种偏底层的都是使用第三方SDK完成的。
 
 
+#### 其他看到的关系卡顿和Crash相关的面试问题
+* 用户报卡顿，有哪些情况，该如何定位问题？
+* 卡顿检测有哪些方案？如果要监控每个函数的耗时如何实现？页面停留时间的检测该如何实现？
+* 页面直接卡死，导致无法获取FPS，怎么解决这个问题？
+* 为什么有时候FPS很高，但还是感觉卡顿？
+* 获取FPS后，怎么定位到具体函数？
+* 怎么做图片、数组、字符串的无差别存储，key怎么确定，怎么删除数据。如何保证取出的数据顺序？
+* 常见的Crash有哪些？如何对这些Crash堆栈进行收集？如何捕获Crash？
+* 捕获的堆栈如何进行符号还原呢？UUID是什么？怎么获取？
+* dysm文件是什么，有什么作用？
+* 如果你的项目中既有Bugly的Crash监控系统，又有自己的监控系统，可能存在什么问题？怎么解决？
+* 针对无堆栈的Crash，比如out of memory有什么定位思路？
+* 常见的野指针问题有哪些？
+* dyld是什么？动态链接和静态链接的区别？dyld是什么时候执行的？dyld如何把对应dylib中函数实现链接到另一个库中的？
+* 
 
 
+质量保障体系相关体系：
+* 内存泄漏检测
+* 内存大图检测
+* 图片主线程解压缩检测
+* 卡顿检测
+* 帧率检测
+* 网络性能检测
+* Crash检测
+* Abort检测(jetsam杀死进程、watchdog杀死进程、后台崩溃)
+* 内存消耗检测
+* DNS解析检测
+* 启动时间检测
 
 
