开始堆栈检测与分析学习

--- a/读书笔记/爬山日志/2020QQ音乐（卒）.md
+++ b/读书笔记/爬山日志/2020QQ音乐（卒）.md
@@ -1,12 +1,12 @@
 #### 主要问题
-* 说一下哪个项目的技术点比较难。
-* 在项目里都做了哪些卡顿的优化？（理论被断掉了，直接说自己做了哪些处理？）
-* 卡顿是怎么做的检测？为什么还要自己写检测工具？那检测的过程中是怎么定位到具体的方法的？
-* 主线程的卡顿是怎么检测到的？为什么要单独写一个CADisplayLink检测主线程上的帧率，如果是主线程已经卡顿的情况下岂不是会加重卡顿？
-* 为什么要使用RunLoop做卡顿优化？一开始加载数据的时候岂不是没法使用？（简历里的坑）
-* 在项目里是如何检测Crash的，降低崩溃率都做了哪些事情？
-* Bugly的检测原理是什么？
-* 是否了解直播的一些底层原理？还是说只停留在SDK的使用过程？
+* 1、说一下哪个项目的技术点比较难。
+* 2、在项目里都做了哪些卡顿的优化？（理论被断掉了，直接说自己做了哪些处理？）
+* 3、卡顿是怎么做的检测？为什么还要自己写检测工具？那检测的过程中是怎么定位到具体的方法的？
+* 4、主线程的卡顿是怎么检测到的？为什么要单独写一个CADisplayLink检测主线程上的帧率，如果是主线程已经卡顿的情况下岂不是会加重卡顿？
+* 5、为什么要使用RunLoop做tableView卡顿优化？一开始加载数据的时候岂不是没法使用？（简历里的坑）
+* 6、在项目里是如何检测Crash的，降低崩溃率都做了哪些事情？
+* 7、Bugly的检测原理是什么？
+* 8、是否了解直播的一些底层原理？还是说只停留在SDK的使用过程？
 
 1、可能是因为一开始紧张，有点语无伦次，所以理论被直接断掉了。然后说实践的时候，自己都觉得这些点很微不足道，没有底气。
 2、面试官估计能力很强，他一直就觉得我使用的是系统API之类的，都应该是基础的东西。没什么难的。而且做的一些实践应该是必须要做的。(总之，被鄙视了)
@@ -20,7 +20,8 @@
 
 2、原则：永远优先直接回答问题，如果是自己比较熟悉的知识点，可以在回答的过程中，稍微带过。其次再看提问者会不会追问一些更深入的东西。
 
-**预排版**：一般就是将**布局计算、文本计算放到后台线程中先异步生成**。比如： 刚获取到JSON数据时，将Cell中要显示的控件的布局数据都在后台线程中计算并封装在一个FeedLayout里。FeedLayout可以包含的内容包括：**cell中每个控件控件CGRect、整体Cell的高度、CoreText的排版结果**等。这样cell里的所有布局就都提前计算好了。但是这个方式需要考虑如果第一页数据非常多的话，可能会导致预排版的时间过长，所以可以结合滑动减速或RunLoop等一起使用。
+**预排版**：一般就是将**布局计算、文本计算、文字排版等放到后台线程中先异步生成**。比如： 刚获取到JSON数据时，将Cell中要显示的控件的布局数据都在后台线程中计算并封装在一个FeedLayout里。FeedLayout可以包含的内容包括：**cell中每个控件控件CGRect、整体Cell的高度、甚至CoreText的排版结果**等。这样cell里的所有布局就都提前计算好了。但是这个方式需要考虑如果第一页数据非常多的话，可能会导致预排版的时间过长，所以可以结合滑动减速或RunLoop等一起使用。
+
 ```
 //预排版类
 @interface FCFFeedLayout : NSObject
@@ -36,14 +37,14 @@
 @property (nonatomic, assign) CGFloat height;
 @end
 ```
-**预渲染**：这里主要是指图片的解码。预渲染也是可以将将要显示的内容提前在后台线程中生成好，然后使用的时候直接赋值就好了。
-	* 文本渲染：主要就是讲CoreText排版绘制成Bitmap。
-	* 图片解码：
-	* 同样是在TableView加载之前，就在后台线程将图片这种资源先渲染出来，尤其是要处理圆角等容易导致离屏渲染的属性，同时缓存到内存中，基本的实现步骤就类似SDWebImage了。另外，在预渲染的过程中，可以将容易导致离屏渲染的属性，尽量使用Core Graphics的API代替。预渲染和异步解码类似，只是时机不一样而已。
+**预渲染**：这里主要是指图片的提前异步解码。预渲染也是可以将将要显示的内容提前在后台线程中生成好，然后使用的时候直接赋值就好了。
+
+* 同样是在TableView加载之前，就在后台线程将图片这种资源先渲染出来，尤其是要处理圆角等容易容易导致离屏渲染的属性，尽量使用Core Graphics的API代替，同时缓存到内存中，基本的实现步骤就类似SDWebImage了。
+* 预渲染和预排版实际就是提前准备好文本、图片相关的绘制内容。和异步绘制类似，只是时机不一样而已。
 
 **异步绘制**：预渲染是在一开始数据回来的时候做的处理。而在列表滑动过程中，对于文本和图像的绘制，则可以使用异步绘制来进行。异步绘制的实现原理就是实现CALayer的displayer方法，然后在函数里，把文本绘制或图片绘制的操作放到后台线程中进行，最后将结果返回主线程显示。
-文本渲染：所有的文本底层都是使用CoreText排版，然后绘制为Bitmap显示的。所以文本绘制就是使用CoreText或者TextKit的API创建文本。使用了CoreText的文本也就无需再计算了。
-图片异步绘制：图像绘制就是使用所有
+**文本绘制主要使用CoreText进行排版绘制，最后包装到Core Graphics的上下文中。图片则直接使用Core Graphics的API进行解码绘制**。
+
 ```
 - (void)display{
 	dispatch_async(backgroundQueue, ^{
@@ -58,30 +59,49 @@
 }
 ```
 
-**异步解码与绘制**：当使用UIImage或CGImageSource创建图片时，图片数据并不会立即解码设置到UIImageView或layer.contents中，只有Layer提交到GPU前，CGImage的数据才会在主线程中得到解码。如果想绕开这个过程，最常见的做法就是将图片绘制到CGBitmapContext中，然后从Bitmap创建图片。目前无论是SDWebImage还是YYKit，都实现了异步解码的过程。
-
-
-
-
 这一套东西下来，基本能够保证一个复杂的列表达到接近50~60帧的效果了。
 
 其次，除了列表的这些步骤，我们平时写代码的过程中，也需要注意一下其他的操作（主要是从CPU和GPU的角度）：
 * 对象创建：对象创建会分配内存、调整属性、甚至读取文件，比较消耗CPU。策略就是**尽量用轻量级的对象创建**，比如CALayer代替无需操作的UIView。又比如说YYKit，单张图片时，直接给CALayer添加了一个setImageWithURL的方法，将图片直接赋值给layer.contents。其次就是**尽量推迟创建对象的时间**，比如使用懒加载。而对于可以复用的对象，**尽可能放到缓存池复用**，比如Cell。
+
 * 对象调整：主要是CALayer的一些属性的调整，比如frame、bounds等，它实际上是通过运行时resolveInstanceMethod为对象临时添加一个方法，然后将对应属性保存到Dictionary里，同时通知Delegate、创建动画。 其次改变CALayer的一些**可动画属性值**时，会对模型层数据做动画，最后显示在展示层上，也多了一份数据的拷贝。所以对象(尤其是视图里的对象)的调整应尽量避免，尤其是视图层次，以及频繁地添加和移除视图。
-* 布局计算和渲染：可以使用**预排版**的方式处理布局和排版。其次尽量少调整，对于复杂的视图来说，尽可能不使用Autolayout和storyboard。
-* 
+
+* 布局计算和渲染：尽可能使用**预排版**的方式处理布局和排版。其次尽量少调整，对于复杂的视图来说，尽可能不使用Autolayout和storyboard。
+
+* 纹理的渲染：实际就是指图片的渲染。iOS中几乎所有的UI视图最终都是绘制成Bitmap，包括文本、图片、栅格化的内容。所以可以尽量减少短时间内大量图片的显示，尽可能将多张图片合成到一张图片中。其次对于过大的图片，比如超过GPU的最大纹理尺寸（4096*4096）,则需要CPU先预处理。所以尽量不要让图片大小超过这个值。
+
+* 视图混合：多个视图重叠时，GPU，所以应该尽量减少视图数量与层次。不透明的视图表面opaque属性，避免无用的Alpha通道合成。
+
+* 避免离屏渲染。
+
+* 线程数量的控制等。
+
+3、卡顿检测：
+首先之所以写卡顿的检测工具，主要是用于测试及产品等部门使用。在线的卡顿检测则是更依赖于Bugly来做的。
+首先，我的工具里对于卡顿的检测，只做了两方面：
+
+一是FPS帧率检测。PFS是通过CADisplayerLink来计算的。主要就是在主线程创建一个DisplayerLink，然后在回调函数里计算每秒回调的次数。CADIsplayerLink是RunLoop的回调帧率，也就是每一帧会回调一次。如果列表滑动的帧率保持在50到60帧的样子，就可以算是很流畅了。如果低于24帧，则基本有肉眼可见的卡顿。但是FPS只能显示出是否卡顿，但是没法定位到具体的函数。
+
+二就是使用一个子线线程NSThread定时查看主线程是否能够响应，如果主线程能够在时间阈值内响应。则说明没有卡顿，如果响应的时间超出了
 
 
 
 
 
+卡顿定位：刚才说过，FPS是没法定位到具体函数的。具体方法：一是使用Instrument的Timer Profile来分析代码的执行时间，基本可以定位到具体的函数。二就是对第二种方法
 
+4、回答如3题的第二种检测方案。只能说主线程放置CADisplayerLink只能是一种择中的方案。
+5、使用RunLoop做卡顿优化，是指在RunLoop休眠的时候进行一些异步绘制、异步解码的操作，比如ASyncDisplayerKit的做饭一样的。其实原理跟第二种检测方式是一样的。
 
+6、崩溃的捕获。
 
+首先，signal的crash是没法使用Xcode调试的，就是崩溃了，你只有阅读Xcode堆栈信息，无法断点查看。但实际上是捕获到了的。
 
+目前捕获了两种类型的崩溃信息，OCExceptionCrash和signalCrash。
 
+OCExceptionCrash可以通过截获的NSException获取到Exception的callStackSymbols（异常堆栈列表）、reason、name，
 
-
+signalCrash可以通过截获signal，然后通过backtrace_symbols获取堆栈信息。
 
 
 
@@ -121,7 +141,30 @@
 * 针对无堆栈的Crash，比如out of memory有什么定位思路？
 * 常见的野指针问题有哪些？
 * dyld是什么？动态链接和静态链接的区别？dyld是什么时候执行的？dyld如何把对应dylib中函数实现链接到另一个库中的？
-* 
+
+
+
+* FPS相关：
+
+  FPS就是根据CADisplayerLink来计算的。CADisplayerLink是RunLoop回调的帧率，也就是每一帧会回调一次。虽然CADisplayerLink尽可能保持帧率的连续，但是如果因为卡顿出现了丢帧的情况，CADisplayerLink自然就不会被回调。所以FPS只是一个相对流畅度的提现。（注意：未完成绘制的帧会被丢掉，但是runloop并不会丢弃操作，耗时的操作依旧会被执行）
+
+  所以最科学地**检测卡顿的方式**：直接监听RunLoop的BefoeWaiting或Exit通知的时间间隔。当然也有人通过子线程定时地ping主线程，然后根据pong的返回间隔来确定是否卡顿问题。这两个方法的原理都是一样的，就是监听RunLoop本身事件循环的周期，当前最关键的问题是时间阈值的确定。卡顿的阈值一般设置为16.7ms * 40（也就是卡了40帧左右）、卡顿崩溃的阈值大概设为3min。
+  对于有时候FPS很高，但是仍然卡顿，没怎么明白原因。
+  
+
+  **如何定位**：
+
+  1、开发阶段：使用Time Profile来检测有卡顿的列表，找出耗时的函数；
+  2、自己开发的工具里：可以在已经确定卡顿的时候，使用thread_info获取对应的线程具体信息。然后查找到对应的堆栈。
+
+
+
+
+
+
+
+
+
 
 
 质量保障体系相关体系：
