--- a/读书笔记/iOS高级笔记/知识小集01.md
+++ b/读书笔记/iOS高级笔记/知识小集01.md
@@ -337,6 +337,10 @@ iOS 10之后，UITableView和CollectionView都提供了一个预加载的接口:
         if (!(basic_info_th->flags & TH_FLAGS_IDLE)) {
             //宏定义TH_USAGE_SCALE返回CPU处理总频率 
             tot_cpu += basic_info_th->cpu_usage / (float)TH_USAGE_SCALE;
+            
+            //如果要获取线程堆栈应该放在这里。
+            
+            
         }
         
     } // for each thread
@@ -474,58 +478,41 @@ iOS的主要崩溃分为三大类，一类是OC抛出的Exception异常，可以
 这里需要注意的是，避免与Bugly这种工具冲突覆盖掉handler的问题，所以使用之前要先进行判断。再处理完自己的handler之后再抛出去。
 
 ```
-/**
- 一、OC异常处理函数
-
- @param exception exception
- */
+//一、OC异常处理函数
+// OC层中未被捕获的异常，通过注册NSUncaughtExceptionHandler捕获异常信息
+void InstallUncaughtExceptionHandler(void) {
+//注册
+    if(NSGetUncaughtExceptionHandler() != custom_exceptionHandler)
+    oldhandler = NSGetUncaughtExceptionHandler();   
+    uncaught_exception_handler(&custom_exceptionHandler);
+}
 static void uncaught_exception_handler (NSException *exception) {
-    // 异常的堆栈信息
-    NSArray *stackArray = [exception callStackSymbols];
-    // 出现异常的原因
+	//获取exception的异常堆栈，NSThread也对应一个类方法的callStackSymbols
+    NSArray *stackArray = [exception callStackSymbols]; 
+    //出现异常的原因
     NSString *reason = [exception reason];
-    // 异常名称
+    //异常名称
     NSString *name = [exception name];
     NSString *exceptionInfo = [NSString stringWithFormat:@"Exception reason：%@\nException name：%@\nException stack：%@",
                                name,
                                reason,
                                stackArray];
-    NSLog(@"%@", exceptionInfo);
     NSMutableArray *tmpArr = [NSMutableArray arrayWithArray:stackArray];
     [tmpArr insertObject:reason atIndex:0];
-    //保存到本地  --  当然你可以在下次启动的时候，上传这个log
+    //保存到本地，以便下次启动查看
     [exceptionInfo writeToFile:[NSString stringWithFormat:@"%@/Documents/error.log",NSHomeDirectory()]
                     atomically:YES
                       encoding:NSUTF8StringEncoding
                          error:nil];
-    
-    /**
-     *  把异常崩溃信息发送至开发者邮件
-     */
-    NSString *content = [NSString stringWithFormat:@"==异常错误报告==\nname:%@\nreason:\n%@\ncallStackSymbols:\n%@",
-                         name,
-                         reason,
-                         [stackArray componentsJoinedByString:@"\n"]];
-    NSMutableString *mailUrl = [NSMutableString string];
-    [mailUrl appendString:@"mailto:test@qq.com"];
-    [mailUrl appendString:@"?subject=程序异常崩溃，请配合发送异常报告，谢谢合作！"];
-    [mailUrl appendFormat:@"&body=%@", content];
-    // 打开地址
-    NSCharacterSet *set = [NSCharacterSet URLHostAllowedCharacterSet];
-    NSString *mailPath = [mailUrl stringByAddingPercentEncodingWithAllowedCharacters:set];
-    //NSString *mailPath = [mailUrl stringByAddingPercentEscapesUsingEncoding:NSUTF8StringEncoding];
-    [[UIApplication sharedApplication] openURL:[NSURL URLWithString:mailPath]];
 }
-/**
- 二、Unix标准的signal机制处理函数
 
- @param sig sig
- */
+//二、Unix标准的signal机制处理函数
+// 内存访问错误，重复释放等错误就无能为力了，因为这种错误它抛出的是Signal，所以必须要专门做Signal处理。 OC中层不能转换的Mach异常，利用Unix标准的signal机制，注册SIGABRT, SIGBUS, SIGSEGV等信号发生时的处理函数。
 void registerSignalHandler(void) { 
 	signal(SIGSEGV, handleSignalException);    
 	signal(SIGFPE, handleSignalException);    
 	signal(SIGBUS, handleSignalException);   
-    signal(SIGPIPE, handleSignalException);    
+    signal(SIGPIPE, handleSignalException); //这个就是上文中socket长连接,服务器关闭之后系统发出的终止进程的信号，如果想不退出，则可以signal(SIGPIPE，SIG_IGN)，然后重定向服务器。
     signal(SIGHUP, handleSignalException);    
     signal(SIGINT, handleSignalException);    
     signal(SIGQUIT, handleSignalException);    
@@ -545,10 +532,7 @@ void handleSignalException(int signal) {
 }
 
 - (BOOL)application:(UIApplication *)application didFinishLaunchingWithOptions:(NSDictionary *)launchOptions {
-    // OC层中未被捕获的异常，通过注册NSUncaughtExceptionHandler捕获异常信息
-    NSSetUncaughtExceptionHandler(&uncaught_exception_handler);
-    // 内存访问错误，重复释放等错误就无能为力了，因为这种错误它抛出的是Signal，所以必须要专门做Signal处理
-    // OC中层不能转换的Mach异常，利用Unix标准的signal机制，注册SIGABRT, SIGBUS, SIGSEGV等信号发生时的处理函数。
+    InstallUncaughtExceptionHandler();
     registerSignalHandler();
     return YES;
 }
@@ -564,60 +548,120 @@ void handleSignalException(int signal) {
 * 内存被爆 和 主线程超时：
   内存被爆和主线程超时，都是由于Watch Dog检测到超时，而向系统杀掉导致的。那这类监控和后台崩溃一样，需要先找到它的阈值，然后临近阈值时进行收集和上报。
   * 内存消耗监测：
-  首先可以使用内存映射来获取线程堆栈信息。调用task_info API获取task_vm_info_data_t数据，获取它的phys_footprint。然后内存不足之前是会回调didReceiveMemoryWarning的函数的，回调这个函数距离被杀掉应该有大概6秒的时间，所以也可以在这里动态获取内存上限值，然后将情形上报。你也可以在这个函数里释放掉一些内存。
+
+    
+
+  * CPU使用检测
+
+    检测线程的内存使用情况和检测线程的CPU使用情况是一样的，通过task_threads获取到进程中所有线程，然后使用thread_info获取线程具体信息。但是堆栈的获取得使用三方库。
   ```
-  //当前app消耗的内存
-  + (NSUInteger)useMemoryForApp{
-    task_vm_info_data_t vmInfo;
-    mach_msg_type_number_t count = TASK_VM_INFO_COUNT;
-    kern_return_t kernelReturn = task_info(mach_task_self(), TASK_VM_INFO, (task_info_t) &vmInfo, &count);
-    if(kernelReturn == KERN_SUCCESS)
-    {
-        int64_t memoryUsageInByte = (int64_t) vmInfo.phys_footprint;
-        return memoryUsageInByte/1024/1024;
-    }
-    else
-  {
-  	return -1;
-  	}
+  //当前app各线程使用检测
+  + (CGFloat)cpuUsageForApp {
+      thread_array_t         thread_list; //线程组
+      mach_msg_type_number_t thread_count; //线程数量
+      /*
+      获取当前进程中的所有线程列表和数量
+      mach_task_self：当前进程
+      return：返回是否bool值。
+      */
+      kern_return_t kr = task_threads(mach_task_self(), &thread_list, &thread_count);
+      if (kr != KERN_SUCCESS)
+          return -1;
+  	//所有CPU的使用量
+      float tot_cpu = 0;
+      //遍历所有线程
+      for (int j = 0; j < thread_count; j++) {
+      	thread_info_data_t     thinfo; //线程信息
+      	mach_msg_type_number_t thread_info_count = THREAD_INFO_MAX;
+          //获取每一个线程信息
+          kr = thread_info(thread_list[j], THREAD_BASIC_INFO,
+                           (thread_info_t)thinfo, &thread_info_count);
+          if (kr != KERN_SUCCESS)
+              return -1;
+          //转成具体线程信息
+          thread_basic_info_t basic_info_th = (thread_basic_info_t)thinfo;
+          //判断是否是非闲置的线程
+          if (!(basic_info_th->flags & TH_FLAGS_IDLE)) {
+              //宏定义TH_USAGE_SCALE返回CPU处理总频率：
+              tot_cpu += basic_info_th->cpu_usage / (float)TH_USAGE_SCALE;
+              
+              //查看线程具体堆栈也是从这里着手
+          }
+      }
+      
+      // 注意方法最后要调用 vm_deallocate，防止出现内存泄漏
+      kr = vm_deallocate(mach_task_self(), (vm_offset_t)thread_list, thread_count * sizeof(thread_t));
+      assert(kr == KERN_SUCCESS);
+      if (tot_cpu < 0) {
+          tot_cpu = 0.;
+      }
+      return tot_cpu;
   }
-  //设备总的内存
-  + (NSUInteger)totalMemoryForDevice{
-    return [NSProcessInfo processInfo].physicalMemory/1024/1024;
-    }
   ```
     * 监测卡顿：
-      卡顿检测还是使用runloop的原理。我们可以在主线程下的common模式下创建一个runloopObserver。然后创建一个子线程专门用来监控主线程的runloop状态。如果监听到进入睡眠前KCFRunLoopBeforeSources状态或者唤醒后的KCFRunLoopAfterWaiting状态在设置的时间阈值内没有变化，即可判定为卡顿，然后获取到堆栈信息，进一步分析到哪个方法的执行时间过长。
+      我使用的卡顿检测方法就是：重写一个NSThread的子类，设置一个时间间隔和最大Watch Dog时间阈值。然后重写她的main函数，在函数里开启一个while循环，然后在时间间隔内查看主线程是否能够处理事件，如果不能处理，则获取主线程的线程堆栈，然后在主线程操作信号量回调之后或者超过最大Watch Dog时间阈值，则将获取到的线程堆栈及卡顿时长进行记录，视为一次卡顿，如果超过一个watch dog阈值则可以视为一次卡顿崩溃，如果主线程能及时处理消息，则说明不卡顿。
   ```
-  //主线程创建观察者
-  CFRunLoopObserverContext context = {0,(__bridge void*)self,NULL,NULL};
-  runLoopObserver = CFRunLoopObserverCreate(kCFAllocatorDefault,kCFRunLoopAllActivities,YES,0,&runLoopObserverCallBack,&context);
+  - (void)main {
+  //在main函数里，只要没有取消当前子线程，就while循环，查看主线程是否可以响应事件。每次循环都sleep一个阈值的时间。
+      while (!self.cancelled) {
+          printf("\n");
+          //查看线程是否活跃
+          if (_isApplicationInActive) {
+              //标志位，用于查看主线程是否有处理的标志
+              self.mainThreadBlock = YES;
+              //主线程堆栈信息
+              self.reportInfo = @"";
+              self.startTimeValue = [[NSDate date] timeIntervalSince1970];
+              printf("1开始查看\n");
+              dispatch_async(dispatch_get_main_queue(), ^{
+                  self.mainThreadBlock = NO;
+                  printf("2执行了主线程，发出信号\n");
+                  verifyReport();
+                  //如果主线程能够响应，则对信号量进行加一
+                  dispatch_semaphore_signal(self.semaphore);
+              });
+              //阻塞当前线程threshold秒
+              [NSThread sleepForTimeInterval:self.threshold];
+              printf("3sleep醒来\n");
+              if (self.isMainThreadBlock) {
+                  printf("4主线程未来得急执行\n");
+                  //如果发生了卡顿，则在threshold秒后，上面主线程肯定是没有执行的。
+                  self.reportInfo = [DoraemonBacktraceLogger doraemon_backtraceOfMainThread];
+              }
+              //如果信号量小于等于0，则阻塞，如果大于0，则先对信号量减一，再执行block操作。或者到时间之后自动执行
+              dispatch_semaphore_wait(self.semaphore, dispatch_time(DISPATCH_TIME_NOW, 300.0 * NSEC_PER_SEC));
+              {
+                  //卡顿超时情况;
+                  printf("5刚收到信号：%f\n",[[NSDate date] timeIntervalSince1970]);
+                  verifyReport();
+              }
+              //如果不卡顿，执行顺序是1、2、3、5；如果卡顿了，则执行顺序是1、3、4、2、5。主线程卡顿多长时间，wait就等待多长时间，或者主线程卡顿的时间操作了300秒。等主线程反应过来之后，对信号量进行加1，则就可以走之后的流程了。但是这也存在一个问题，如果是卡顿太久，导致了崩溃呢！这里就收不到信号了。
+          } else {
+              //阻塞当前线程threshold秒
+              [NSThread sleepForTimeInterval:self.threshold];
+          }
+      }
+  }
+  ```
   
-  //创建子线程监控
-  dispatch_async(dispatch_get_global_queue(0, 0), ^{
-    //子线程开启一个持续的 loop 用来进行监控
-    while (YES) {
-        long semaphoreWait = dispatch_semaphore_wait(dispatchSemaphore, dispatch_time(DISPATCH_TIME_NOW, 3 * NSEC_PER_SEC));
-        if (semaphoreWait != 0) {
-            if (!runLoopObserver) {
-                timeoutCount = 0;
-                dispatchSemaphore = 0;
-                runLoopActivity = 0;
-                return;
-            }
-            //BeforeSources 和 AfterWaiting 这两个状态能够检测到是否卡顿
-            if (runLoopActivity == kCFRunLoopBeforeSources || runLoopActivity == kCFRunLoopAfterWaiting) {
-                //将堆栈信息上报服务器的代码放到这里
-            } //end activity
-        }// end semaphore wait
-        timeoutCount = 0;
-    }// end while
-  });
-  ```
-  这个3秒就是Watch Dog的时间阈值。所以如果在这个检测里收集到卡顿日志，那么它就有可能就被crash掉了。
 
 ##### 堆栈收集与分析。
-backtrace_symbols方法就可以捕获当前堆栈信息，可以先保存到本地，下次启动的时候再获取。
+
+上述过程中的CPU使用检测、卡顿检测都最好追踪到具体函数和堆栈，使用的方法基本是：xxx
+
+
+
+首先，signal的crash是没法使用Xcode调试的，就是崩溃了，你只有阅读Xcode堆栈信息，无法断点查看。但实际上是捕获到了的。
+
+目前捕获了两种类型的崩溃信息，OCExceptionCrash和signalCrash。
+
+OCExceptionCrash可以通过截获的NSException获取到Exception的callStackSymbols（异常堆栈列表）、reason、name，
+
+signalCrash可以通过截获signal，然后通过backtrace_symbols获取堆栈信息。
+
+
+
+
 
 [iOS Crash的捕获知识](<https://www.jianshu.com/p/5fcf7bb7955f>)
 
