开始堆栈检测与分析学习

--- a/读书笔记/iOS高级笔记/知识小集01.md
+++ b/读书笔记/iOS高级笔记/知识小集01.md
@@ -242,13 +242,6 @@ iOS 10之后，UITableView和CollectionView都提供了一个预加载的接口:
 
   * 后台下载：使用`-[UIApplication beginBackgroundTaskWithExpirationHandler:]` 方法使 app 退到后台时还能继续执行任务, 不再执行后台任务时，需要调用 `-[UIApplication endBackgroundTask:]` 方法标记后台任务结束
 
-    作者：ShannonChenCHN
-
-    链接：https://www.jianshu.com/p/06f0265c22eb
-
-    来源：简书
-
-    著作权归作者所有。商业转载请联系作者获得授权，非商业转载请注明出处。
 
   * 框架中使用最大的锁是dispatch_semaphore_t，其次是@synchronized互斥锁；
 
@@ -260,111 +253,8 @@ iOS 10之后，UITableView和CollectionView都提供了一个预加载的接口:
 
 ### Crash 及 APP 性能监控相关
 面试常考题：介绍你碰到过的印象较深刻的外网crash，并介绍发现、定位、解决的过程。
-#### 性能相关检测
-##### 子线程UI检测
-原理：Hook UIView的三个必须在主线程操作的绘制方法：setNeedsDisplay、setNeedsLayout、setNeedsDisplayRect。然后判断他们是否在子线程中操作，如果是在子线程中进行的话，打印出当前代码调用堆栈。
-##### 帧率监测
-原理：帧率FPS检测主要是检测APP的界面卡顿，判断流畅性。通常的做法是基于CADisplayLin做FPS计算，CADisplayLink是Core Animation提供的一个类似NSTimer的定时器，它会在屏幕每次刷新回调一次，所以它也是以runloop的帧率为标准。所以只需统计每秒方法执行的次数，次数/时间就可以得出帧率了。但是它无法真正定位到性能。
-```
--(void)starRecord{
-    if(_link) {
-        _link.paused = NO;
-    }else{
-        _link = [CADisplayLink displayLinkWithTarget:self selector:@selector(trigger:)];
-        [_link addToRunLoop:[NSRunLoop mainRunLoop] forMode:NSRunLoopCommonModes];
-    }
-}
-- (void)trigger:(CADisplayLink * link) {
-    if ( lastTime == 0 ){
-       	lastTime = link.timestamp;
-        return;
-    }
-    
-    count ++;
-    NSTimeInterval delta = link.timestamp - lastTime;
-    if (delta < 1) return;
-    lastTime = link.timestamp;
-    CGFloat fps = count / delta;
-    count = 0;
-}
-```
-##### CPU使用监测
-原理：CPU长时间处于高消耗的状态，会使手机发热，耗电量加剧，导致APP产生卡顿。所以要对APP的CPU使用进行监测；
-方案就是：使用task_thread函数，获取当前APP所有的线程列表，然后遍历每一个线程，通过thread_info函数获取每一个非闲置线程的cpu使用。
-
-```
-+ (CGFloat)cpuUsageForApp {
-    kern_return_t kr;
-    thread_array_t         thread_list; // mach_port_t 类似的指针数组，用于存放从线程
-    mach_msg_type_number_t thread_count; //unsigned int 存放获取的线程数
-    thread_info_data_t     thinfo;
-    mach_msg_type_number_t thread_info_count;
-    /*
-         线程基本信息：thread_basic_info_t
-         struct thread_basic_info {
-             time_value_t    user_time;  //用户运行时长
-             time_value_t    system_time;  //系统运行时长
-             integer_t       cpu_usage;  //cpu使用率，应该是指占整体的百分百
-             policy_t        policy;     //调度策略
-             integer_t       run_state;   //运行状态
-             integer_t       flags;        //各种标记
-             integer_t       suspend_count;  //暂停线程时的计数，不知道有啥用
-             integer_t       sleep_time;    //休眠时长
-         };
-         */
-    thread_basic_info_t basic_info_th;
-    
-    // get threads in the task
-    //  获取当前进程中 线程列表
-    //  mach_task_self() 返回 mach_port_t 类型，应该是指当前进程
-    // c语言中引用一般是用于做返回值的，所以这个函数的作用就是从当前进程中获取所有线程数组，及线程数。返回是否成功的Bool值（C语言中非0就是true）。
-    kr = task_threads(mach_task_self(), &thread_list, &thread_count);
-    if (kr != KERN_SUCCESS)
-        return -1;
-
-    float tot_cpu = 0;
-    
-    for (int j = 0; j < thread_count; j++) {
-        thread_info_count = THREAD_INFO_MAX;
-        //thread_info用来获取当前这个线程的具体信息。
-        kr = thread_info(thread_list[j], THREAD_BASIC_INFO,
-                         (thread_info_t)thinfo, &thread_info_count);
-        if (kr != KERN_SUCCESS)
-            return -1;
-        
-        basic_info_th = (thread_basic_info_t)thinfo;
-        //这个与操作就是判断线程是否是一个空闲线程
-        if (!(basic_info_th->flags & TH_FLAGS_IDLE)) {
-            //宏定义TH_USAGE_SCALE返回CPU处理总频率 
-            tot_cpu += basic_info_th->cpu_usage / (float)TH_USAGE_SCALE;
-            
-            //如果要获取线程堆栈应该放在这里。
-            
-            
-        }
-        
-    } // for each thread
-    
-    // 注意方法最后要调用 vm_deallocate，防止出现内存泄漏
-    kr = vm_deallocate(mach_task_self(), (vm_offset_t)thread_list, thread_count * sizeof(thread_t));
-    assert(kr == KERN_SUCCESS);
-    
-    return tot_cpu;
-}
-```
-
-##### 流量监控
-iOS的类NSURLProtocol可以拦截NSURLConnect、NSURLSession、UIWebView中的所有网络请求，获取每一次请求的request和response对象。但是这个类没法拦截TCP请求。可以使用URLProtocol做如下事情：
-* 重定向网络请求
-* 忽略网络请求，使用本地缓存
-* 自定义网络请求的返回结果
-* 一些全局的网络请求设置
-
-[NSURLProtocol的使用](https://www.jianshu.com/p/ec5d6c204e17)
-
-#### Crash相关检查
-
-##### 常见的Crash
+#### Crash相关
+##### 常见的Crash及处理
 
 - 找不到方法：unrecognized selector sent to instance：
   eg：比如说未实现的代理方法；对可变集合使用了copy后，对其进行修改操作。
@@ -547,61 +437,118 @@ void handleSignalException(int signal) {
 
 * 内存被爆 和 主线程超时：
   内存被爆和主线程超时，都是由于Watch Dog检测到超时，而向系统杀掉导致的。那这类监控和后台崩溃一样，需要先找到它的阈值，然后临近阈值时进行收集和上报。
-  * 内存消耗监测：
 
+
+#### 各种检测
+##### 子线程UI检测
+原理：Hook UIView的三个必须在主线程操作的绘制方法：setNeedsDisplay、setNeedsLayout、setNeedsDisplayRect。然后判断他们是否在子线程中操作，如果是在子线程中进行的话，打印出当前代码调用堆栈。
+##### 帧率监测
+原理：帧率FPS检测主要是检测APP的界面卡顿，判断流畅性。通常的做法是基于CADisplayLin做FPS计算，CADisplayLink是Core Animation提供的一个类似NSTimer的定时器，它会在屏幕每次刷新回调一次，所以它也是以runloop的帧率为标准。所以只需统计每秒方法执行的次数，次数/时间就可以得出帧率了。但是它无法真正定位到性能。
+```
+-(void)starRecord{
+    if(_link) {
+        _link.paused = NO;
+    }else{
+        _link = [CADisplayLink displayLinkWithTarget:self selector:@selector(trigger:)];
+        [_link addToRunLoop:[NSRunLoop mainRunLoop] forMode:NSRunLoopCommonModes];
+    }
+}
+- (void)trigger:(CADisplayLink * link) {
+    if ( lastTime == 0 ){
+       	lastTime = link.timestamp;
+        return;
+    }
     
+    count ++;
+    NSTimeInterval delta = link.timestamp - lastTime;
+    if (delta < 1) return;
+    lastTime = link.timestamp;
+    CGFloat fps = count / delta;
+    count = 0;
+}
+```
+##### CPU使用监测
+原理：CPU长时间处于高消耗的状态，会使手机发热，耗电量加剧，导致APP产生卡顿。所以要对APP的CPU使用进行监测；
+方案就是：使用task_thread函数，获取当前APP所有的线程列表，然后遍历每一个线程，通过thread_info函数获取每一个非闲置线程的cpu使用。
 
-  * CPU使用检测
+```
++ (CGFloat)cpuUsageForApp {
+	// mach_port_t 类似的指针数组，用于存放从线程
+	thread_array_t         thread_list; 
+	//unsigned int 存放获取的线程数
+	mach_msg_type_number_t thread_count; 
+    thread_info_data_t     thinfo;
+    mach_msg_type_number_t thread_info_count;
+    /*
+	线程基本信息：thread_basic_info_t
+	struct thread_basic_info {
+       time_value_t    user_time;  //用户运行时长
+       time_value_t    system_time;  //系统运行时长
+       integer_t       cpu_usage;  //cpu使用率，应该是指占整体的百分百
+       policy_t        policy;     //调度策略
+       integer_t       run_state;   //运行状态
+       integer_t       flags;        //各种标记
+       integer_t       suspend_count;  //暂停线程时的计数，不知道有啥用
+       integer_t       sleep_time;    //休眠时长
+	};
+	*/
+    thread_basic_info_t basic_info_th;
+    
+    /* get threads in the task
+	获取当前进程中 线程列表
+	mach_task_self() 返回 mach_port_t 类型，应该是指当前进程
+	c语言中引用一般是用于做返回值的，所以这个函数的作用就是从当前进程中获取所有线程数组，及线程数。返回是否成功的Bool值（C语言中非0就是true）。
+    */
+    kern_return_t kr = task_threads(mach_task_self(), &thread_list, &thread_count);
+    if (kr != KERN_SUCCESS)
+        return -1;
+    float tot_cpu = 0;
+    for (int j = 0; j < thread_count; j++) {
+        thread_info_count = THREAD_INFO_MAX;
+        //thread_info用来获取当前这个线程的具体信息。
+        kr = thread_info(thread_list[j], THREAD_BASIC_INFO,
+                         (thread_info_t)thinfo, &thread_info_count);
+        if (kr != KERN_SUCCESS)
+            return -1;
+        basic_info_th = (thread_basic_info_t)thinfo;
+        //这个与操作就是判断线程是否是一个空闲线程
+        if (!(basic_info_th->flags & TH_FLAGS_IDLE)) {
+            //宏定义TH_USAGE_SCALE返回CPU处理总频率 
+            tot_cpu += basic_info_th->cpu_usage / (float)TH_USAGE_SCALE;
+            //如果要获取线程堆栈应该放在这里。
+            ... ...
+		}
+	}
+    
+    // 注意方法最后要调用 vm_deallocate，防止出现内存泄漏
+    kr = vm_deallocate(mach_task_self(), (vm_offset_t)thread_list, thread_count * sizeof(thread_t));
+    assert(kr == KERN_SUCCESS);
+    return tot_cpu;
+}
+```
+##### 内存消耗监测：
+内存消耗监测与CPU使用监测一样的，通过使用task_info来获取进程的虚拟信息，然后获取到phys_footprint。
+```
+-(NSInterger)useMemoryForApp {
+    task_vm_info_data_t vmInfo;
+    mach_msg_type_number_t count = TASK_VM_INFO_COUNT;
+    kern_return_t kernelReturn = task_info(mach_task_self(), TASK_VM_INFO, (task_info_t) &vmInfo, &count);
+	if(kernelReturn == KERN_SUCCESS)
+	{
+    	int64_t memoryUsageInByte = (int64_t) vmInfo.phys_footprint;
+    	return (NSInteger)(memoryUsageInByte/1024/1024);
+	}
+	else
+	{
+    	return -1;
+	}
+}
+```
 
-    检测线程的内存使用情况和检测线程的CPU使用情况是一样的，通过task_threads获取到进程中所有线程，然后使用thread_info获取线程具体信息。但是堆栈的获取得使用三方库。
-  ```
-  //当前app各线程使用检测
-  + (CGFloat)cpuUsageForApp {
-      thread_array_t         thread_list; //线程组
-      mach_msg_type_number_t thread_count; //线程数量
-      /*
-      获取当前进程中的所有线程列表和数量
-      mach_task_self：当前进程
-      return：返回是否bool值。
-      */
-      kern_return_t kr = task_threads(mach_task_self(), &thread_list, &thread_count);
-      if (kr != KERN_SUCCESS)
-          return -1;
-  	//所有CPU的使用量
-      float tot_cpu = 0;
-      //遍历所有线程
-      for (int j = 0; j < thread_count; j++) {
-      	thread_info_data_t     thinfo; //线程信息
-      	mach_msg_type_number_t thread_info_count = THREAD_INFO_MAX;
-          //获取每一个线程信息
-          kr = thread_info(thread_list[j], THREAD_BASIC_INFO,
-                           (thread_info_t)thinfo, &thread_info_count);
-          if (kr != KERN_SUCCESS)
-              return -1;
-          //转成具体线程信息
-          thread_basic_info_t basic_info_th = (thread_basic_info_t)thinfo;
-          //判断是否是非闲置的线程
-          if (!(basic_info_th->flags & TH_FLAGS_IDLE)) {
-              //宏定义TH_USAGE_SCALE返回CPU处理总频率：
-              tot_cpu += basic_info_th->cpu_usage / (float)TH_USAGE_SCALE;
-              
-              //查看线程具体堆栈也是从这里着手
-          }
-      }
-      
-      // 注意方法最后要调用 vm_deallocate，防止出现内存泄漏
-      kr = vm_deallocate(mach_task_self(), (vm_offset_t)thread_list, thread_count * sizeof(thread_t));
-      assert(kr == KERN_SUCCESS);
-      if (tot_cpu < 0) {
-          tot_cpu = 0.;
-      }
-      return tot_cpu;
-  }
-  ```
-    * 监测卡顿：
-      我使用的卡顿检测方法就是：重写一个NSThread的子类，设置一个时间间隔和最大Watch Dog时间阈值。然后重写她的main函数，在函数里开启一个while循环，然后在时间间隔内查看主线程是否能够处理事件，如果不能处理，则获取主线程的线程堆栈，然后在主线程操作信号量回调之后或者超过最大Watch Dog时间阈值，则将获取到的线程堆栈及卡顿时长进行记录，视为一次卡顿，如果超过一个watch dog阈值则可以视为一次卡顿崩溃，如果主线程能及时处理消息，则说明不卡顿。
-  ```
-  - (void)main {
+##### 监测卡顿：
+我使用的卡顿检测方法就是：重写一个NSThread的子类，设置一个时间间隔和最大Watch Dog时间阈值。然后重写她的main函数，在函数里开启一个while循环，然后在时间间隔内查看主线程是否能够及时处理事件，如果主线程能及时处理消息，则说明不卡顿。如果不能处理，则获取主线程的线程堆栈，然后在主线程操作信号量发出之后或者超过最大Watch Dog时间阈值，则将获取到的线程堆栈及卡顿时长进行记录，视为一次卡顿，如果超过一个watch dog阈值则可以视为一次卡顿崩溃，先暂时存起来，如果后续有主线程的信号过来，则把假定的Watch Dog崩溃日志去除。
+```
+- (void)main {
   //在main函数里，只要没有取消当前子线程，就while循环，查看主线程是否可以响应事件。每次循环都sleep一个阈值的时间。
       while (!self.cancelled) {
           printf("\n");
@@ -626,38 +573,44 @@ void handleSignalException(int signal) {
               if (self.isMainThreadBlock) {
                   printf("4主线程未来得急执行\n");
                   //如果发生了卡顿，则在threshold秒后，上面主线程肯定是没有执行的。
-                  self.reportInfo = [DoraemonBacktraceLogger doraemon_backtraceOfMainThread];
+                  self.reportInfo = [DoraemonBacktraceLogger doraemon_backtraceOfMainThread]; //这里包含堆栈的查看信息
               }
-              //如果信号量小于等于0，则阻塞，如果大于0，则先对信号量减一，再执行block操作。或者到时间之后自动执行
+              //如果信号量小于等于0，则阻塞，如果大于0，则先对信号量减一，再执行block操作。或者到最大卡顿崩溃时间之后自动执行，下面这个300可以视为watch Dog的查杀时间
               dispatch_semaphore_wait(self.semaphore, dispatch_time(DISPATCH_TIME_NOW, 300.0 * NSEC_PER_SEC));
               {
                   //卡顿超时情况;
-                  printf("5刚收到信号：%f\n",[[NSDate date] timeIntervalSince1970]);
+                  if self.isMainThreadBlock {
+                      //说明是超过了300.0秒
+                      printf("5超过最大Watch Dog时间阈值：%f\n",[[NSDate date] timeIntervalSince1970]);
+                  }else{
+                      printf("5刚收到信号：%f\n",[[NSDate date] timeIntervalSince1970]);
+                  }
                   verifyReport();
               }
-              //如果不卡顿，执行顺序是1、2、3、5；如果卡顿了，则执行顺序是1、3、4、2、5。主线程卡顿多长时间，wait就等待多长时间，或者主线程卡顿的时间操作了300秒。等主线程反应过来之后，对信号量进行加1，则就可以走之后的流程了。但是这也存在一个问题，如果是卡顿太久，导致了崩溃呢！这里就收不到信号了。
+              //如果不卡顿，执行顺序是1、2、3、5；如果卡顿了，则执行顺序是1、3、4、2、5。主线程卡顿多长时间，wait就等待多长时间，或者主线程卡顿的时间超过了300秒。等主线程反应过来之后，对信号量进行加1，则就可以走之后的流程了。但是这也存在一个问题，如果是卡顿太久，导致了崩溃呢！这里就收不到信号了。
           } else {
               //阻塞当前线程threshold秒
               [NSThread sleepForTimeInterval:self.threshold];
           }
       }
   }
-  ```
-  
+```
 
-##### 堆栈收集与分析。
+##### 流量监控
+iOS的类NSURLProtocol可以拦截NSURLConnect、NSURLSession、UIWebView中的所有网络请求，获取每一次请求的request和response对象。但是这个类没法拦截TCP请求。可以使用URLProtocol做如下事情：
+* 重定向网络请求
+* 忽略网络请求，使用本地缓存
+* 自定义网络请求的返回结果
+* 一些全局的网络请求设置
 
-上述过程中的CPU使用检测、卡顿检测都最好追踪到具体函数和堆栈，使用的方法基本是：xxx
+[NSURLProtocol的使用](https://www.jianshu.com/p/ec5d6c204e17)
 
 
 
-首先，signal的crash是没法使用Xcode调试的，就是崩溃了，你只有阅读Xcode堆栈信息，无法断点查看。但实际上是捕获到了的。
+#### 堆栈收集与分析。
 
-目前捕获了两种类型的崩溃信息，OCExceptionCrash和signalCrash。
+上述过程中的CPU使用检测、卡顿检测如果要追踪到具体函数，则需要获取卡顿线程的具体函数和堆栈，使用的方法流程大概是：
 
-OCExceptionCrash可以通过截获的NSException获取到Exception的callStackSymbols（异常堆栈列表）、reason、name，
-
-signalCrash可以通过截获signal，然后通过backtrace_symbols获取堆栈信息。
 
 
 
@@ -785,17 +738,11 @@ https://www.jianshu.com/p/b3c209f6a709
 
 
 
-
 ### AsyncDisplayKit：
 整体框架：
 正常情况下，UIView作为CALayer的delegate，而CALayer作为UIView的一个成员变量，负责视图展示工作。ASDK则是在此之上封装了一个ASNod类，它有点view的成员变量，可以生成一个UIView，同时UIView有一个.node成员属性，可以获取到它所对应的Node。而ASNode是线程安全的，它可以放到后台线程创建和修改。所以平时我们对UIView的一些相关修改就可以落地到对ASNode的属性的修改和提交，同时模仿Core Animation提交setneeddisplayer的这种形式把对ASNode的修改进行封装提交到一个全局容器中，然后监听runloop的beforewaiting的通知，当runloop进入休眠时，ASDK则可以从全局容器中把ASNode提取出来，然后把对应的属性设置一次性设置给UIView。
 
 主要解决的问题：布局的耗时运算(文本宽高、视图布局运算)、渲染(文本渲染、图片解码、图形绘制)、UIKit的对象处理(对象创建、对象调整、对象销毁)。因为这些对象基本都是在UIKit和Core Animation框架下，而UIKit和Core Animation相关操作必须在主线程中进行。所以ASDK的任务就是把这些任务从主线挪走，挪不走的就尽量优化。
-
-
-
-
-
 
 
 
@@ -829,7 +776,7 @@ https://www.jianshu.com/p/b3c209f6a709
 ##### 二叉树:
 前序、中序、后序遍历指的是根节点的位置。
 中序：
-​```OC
+```OC
 //中序，使用栈
 -(void)sourt1:(Node *)root{
    Node* p = root;
@@ -864,6 +811,4 @@ https://www.jianshu.com/p/b3c209f6a709
 }
 //后序：也是使用栈。这个好难，先放弃吧
 
-  ```
-
-  ```
+```
