--- a/读书笔记/爬山日志/2020QQ音乐（卒）.md
+++ b/读书笔记/爬山日志/2020QQ音乐（卒）.md
@@ -82,48 +82,34 @@
 
 一是FPS帧率检测。PFS是通过CADisplayerLink来计算的。主要就是在主线程创建一个DisplayerLink，然后在回调函数里计算每秒回调的次数。CADIsplayerLink是RunLoop的回调帧率，也就是每一帧会回调一次。如果列表滑动的帧率保持在50到60帧的样子，就可以算是很流畅了。如果低于24帧，则基本有肉眼可见的卡顿。但是FPS只能显示出是否卡顿，但是没法定位到具体的函数。
 
-二就是使用一个子线线程NSThread定时查看主线程是否能够响应，如果主线程能够在时间阈值内响应。则说明没有卡顿，如果响应的时间超出了
+二就是重写一个NSThread的子类，设置一个时间间隔和最大Watch Dog时间阈值。然后重写她的main函数，在函数里开启一个while循环，然后在时间间隔内查看主线程是否能够及时处理事件，如果主线程能及时处理消息，则说明不卡顿。如果不能处理，则获取主线程的线程堆栈，然后在主线程操作信号量发出之后或者超过最大Watch Dog时间阈值，则将获取到的线程堆栈及卡顿时长进行记录，视为一次卡顿，如果超过一个watch dog阈值则可以视为一次卡顿崩溃，先暂时存起来，如果后续有主线程的信号过来，则把假定的Watch Dog崩溃日志去除。
 
 
 
+卡顿定位：刚才说过，FPS是没法定位到具体函数的。具体方法：一是使用Instrument的Timer Profile来分析代码的执行时间，基本可以定位到具体的函数。二就是通过内核线程信息获取线程堆栈，找到对应的函数。
 
 
-卡顿定位：刚才说过，FPS是没法定位到具体函数的。具体方法：一是使用Instrument的Timer Profile来分析代码的执行时间，基本可以定位到具体的函数。二就是对第二种方法
 
-4、回答如3题的第二种检测方案。只能说主线程放置CADisplayerLink只能是一种择中的方案。
-5、使用RunLoop做卡顿优化，是指在RunLoop休眠的时候进行一些异步绘制、异步解码的操作，比如ASyncDisplayerKit的做饭一样的。其实原理跟第二种检测方式是一样的。
+4、回答如3题的第二种检测方案。只能说主线程放置CADisplayerLink是一种择中的方案。
+5、使用RunLoop做卡顿优化，是指将一些耗时操作，比如图片解码，放到一个队里里，在监听到RunLoop是BeforeWaiting（即将进入休眠）的时候，再开始解码操作。
 
 6、崩溃的捕获。
 
-首先，signal的crash是没法使用Xcode调试的，就是崩溃了，你只有阅读Xcode堆栈信息，无法断点查看。但实际上是捕获到了的。
+首先，根据是否可捕获，我们可以将崩溃记录大致分为三种：一是语言层面的Exception，二是mach异常，这两类是可以通过方法捕获到崩溃的，另外一种无法捕获到的崩溃就是后台查杀、内存被爆、主线程卡顿超时等导致的系统级别的查杀。
 
-目前捕获了两种类型的崩溃信息，OCExceptionCrash和signalCrash。
+语言层面的Exception：可以通过注册uncaught_exception_handler，来截获崩溃，获取到Exception的callStackSymbols（异常堆栈列表）、reason、name；
 
-OCExceptionCrash可以通过截获的NSException获取到Exception的callStackSymbols（异常堆栈列表）、reason、name，
+mach异常则会发出Unix标准的Signal信号。所以可以通过注册SignalHandler来截获对应的线程，获取通过线程对应的backtrace_symbols获取堆栈信息。
 
-signalCrash可以通过截获signal，然后通过backtrace_symbols获取堆栈信息。
+另外一种则需要一些特殊的方式去避免或者监听崩溃的可能发生：
 
+内存被爆和主线程卡顿，可以通过卡顿检测的最大时间阈值来模拟判断；
 
+后台线程也可以通过监听后台线程运行时长来模拟判断。
 
+7、Bugly的检测原理：略。
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+8、
 
 
 
