--- a/读书笔记/iOS高级笔记/知识小集03.md
+++ b/读书笔记/iOS高级笔记/知识小集03.md
@@ -1,13 +1,11 @@
 ---
 title: iOS-技能知识小集
-date: 2020-5-9 17:36:48
+date: 2020-6-12 16:58:48
 tags: knoeledgePoints
 categories: iOS进阶
-description:  总结了OC学习当中的主要知识点。底层进阶相关的理论知识点为主
+description:  总结了OC学习当中的主要细节点。以理论知识点为辅！
 ---
 
-### 常考小知识点
-#### FPS检测原理：CADisplayLink
-#### class vs struct
-#### 引用 vs 指针
-#### define vs const
+Autolayout 与 动画
+使用AutoLayout或者masonry时，在UIView做隐式动画，通常做法是先在UIView.animation外面设置好相关属性值，然后在Animation里面调用setNeedsLayout()。
+**原理**：所有CALayer的更新都是先会被打上脏标记放到全局容器里，然后在RunLoop的更新周期将要结束时，查看全局容器里是否有需要更新的视图脏标记，才会进行更新。所以我们把这些属性设置在block之外，也是不会立马执行的，而是要在block里的setNeedsLayout触发。
