--- a/读书笔记/iOS高级笔记/知识小集00.md
+++ b/读书笔记/iOS高级笔记/知识小集00.md
@@ -387,20 +387,63 @@ q2：当一个对象被释放之后，weak变量是怎么被清理的。
 #### AutoreleasePool
 AutoreleasePool是用于对延迟释放的对象的内存管理。
 * 首先来看一下AutoreleasePool的内部结构:
-AutoreleasePool是一个以AutoreleasePoolPage为节点的双向链表，同时它含有一个pthread的成员。AutoreleasePoolPage是一个栈结构，它里面有一个next指针。在ARC中的实现流程是：当@autoreleasepool{}中，{开始的位置会被编译成AutoreleasePoolPagePush(),它会在当前page栈中插入一个标志位，并且返回。在执行{}之间的代码时，会把当前生成的对象依从插入到next指针的位置，next指针在栈中依从往栈顶走，当栈满了的时候，就会生成下一个page，在}结束前，会把标志位做为入参执行AutoreleasePoolPagePop(xx),这个时候就会给标志位与next指针之间的对象依次发送release消息，然后复位next指针位置。
+  AutoreleasePool是一个以AutoreleasePoolPage为节点的双向链表，同时它含有一个pthread的成员。AutoreleasePoolPage是一个栈结构，它里面有一个next指针。在ARC中的实现流程是：当@autoreleasepool{}中，{开始的位置会被编译成AutoreleasePoolPagePush(),它会在当前page栈中插入一个标志位，并且返回。在执行{}之间的代码时，会把当前生成的对象依从插入到next指针的位置，next指针在栈中依从往栈顶走，当栈满了的时候，就会生成下一个page，在}结束前，会把标志位做为入参执行AutoreleasePoolPagePop(xx),这个时候就会给标志位与next指针之间的对象依次发送release消息，然后复位next指针位置。
+
 * 注意：
-因为AutoreleasePool的数据结构实际是以标志位插入的方式来实现的，所以无论有多少层嵌套，都只是对标志位进行操作而已。
+  因为AutoreleasePool的数据结构实际是以标志位插入的方式来实现的，所以无论有多少层嵌套，都只是对标志位进行操作而已。
 
 * AutoreleasePool与runloop的关系及内存管理：
-AutoreleasePool与线程是一一对应的关系，那么它与runloop自然也是一一对应的关系。在runloop发出CFRunLoopEntry通知的时候，会执行一个AutoreleasePagePush()函数，创建一个AutoreleasePool，然后runloop的事件循环中（因为runloop是在KCFRunLoopBeforObserver后才开启事件循环的），如果监听到了kCFRunLoopBeforeWaiting通知，会先执行AutoreleasePagePop()然后再执行AutoreleasePagePush()，相当于释放旧的AutoreleasePool，创建新的AutoreleasePool。然后在runloop退出前，即接收到KCFRunLoopExit通知时，再执行AutoreleasePagePop()释放掉AutoreleasePool。所以从这里可以看出，在Runloop的每一次事件循环期间，也是会对标志位直接的每一个对象发送一次release的，以及时释放掉无用的对象。
+  AutoreleasePool与线程是一一对应的关系，那么它与runloop自然也是一一对应的关系。在runloop发出CFRunLoopEntry通知的时候，会执行一个AutoreleasePagePush()函数，创建一个AutoreleasePool，然后runloop的事件循环中（因为runloop是在KCFRunLoopBeforObserver后才开启事件循环的），如果监听到了kCFRunLoopBeforeWaiting通知，会先执行AutoreleasePagePop()然后再执行AutoreleasePagePush()，相当于释放旧的AutoreleasePool，创建新的AutoreleasePool。然后在runloop退出前，即接收到KCFRunLoopExit通知时，再执行AutoreleasePagePop()释放掉AutoreleasePool。所以从这里可以看出，在Runloop的每一次事件循环期间，也是会对标志位直接的每一个对象发送一次release的，以及时释放掉无用的对象。
 
 * 什么样的对象会自动加入到AutoreleasePool中？
-虽然说main函数里有@AutoreleasePool，但是并不是说所有对象都会交给Autoreleasepool来处理。
-	* 使用类方法生成的对象（或者说作为方法的返回值的对象），会被自动注册到Autoreleasepool中。比如：id obj = [NSMutableArray array]; 
-	* id指针或者对象指针没有显示指定时会被附加上 __autoreleastring修饰符。比如传参过程中的（NSError **）err 就等同于 <#NSError * _Nullable __autoreleasing * Nullable#>。
+  虽然说main函数里有@AutoreleasePool，但是并不是说所有对象都会交给Autoreleasepool来处理。
+  * 使用类方法生成的对象（或者说作为方法的返回值的对象），会被自动注册到Autoreleasepool中。比如：id obj = [NSMutableArray array]; 
+  * id指针或者对象指针没有显示指定时会被附加上 __autoreleastring修饰符。比如传参过程中的（NSError **）err 就等同于 <#NSError * _Nullable __autoreleasing * Nullable#>。
 
 * **子线程默认不开启RunLoop，那出现Autorelease对象如何处理？会不会出现内存泄漏？**
-在子线程中，如果你创建了Pool的话，产生的Autorelease对象就会交给Pool去管理，如果你没有创建Pool，产生了Autorelease对象，就会调用autoreleaseNoPage方法。在这个方法中，会帮你自动创建一个hotPage(hotPage可以理解为当前正在使用的AutoreleasePoolPage)。然后调用page->add(obj)将对象添加到当前正在使用的AutoreleasePoolPage的栈中，所以这也不会导致内存泄漏。
+  在子线程中，如果你创建了Pool的话，产生的Autorelease对象就会交给Pool去管理，如果你没有创建Pool，产生了Autorelease对象，就会调用autoreleaseNoPage方法。在这个方法中，会帮你自动创建一个hotPage(hotPage可以理解为当前正在使用的AutoreleasePoolPage)。然后调用page->add(obj)将对象添加到当前正在使用的AutoreleasePoolPage的栈中，所以这也不会导致内存泄漏。
+
+* main函数的AutoreleasePool有什么作用，可否直接去去掉？
+实际上UIApplicationMain是永远不会返回的，除了系统kill应用，系统会把整个应用占用的内存释放掉。因为UIApplicationMain永远不会返回，所以这里的AutoreleasePool就没有执行pop的机会，所以实际上如果删掉应该也不会有内存泄漏的问题。
+
+* 自动释放池在MRC和ARC中的区别：
+如果函数返回值是对象的话，MRC则需要区分调用者是否拥有这个返回值，如果调用者拥有中国返回值，则调用者就要对其进行释放，如果没有就不需要。比如说：
+```
+分析：调用者直接拥有返回值。对象初始化时引用计数为1，property是retain的话，赋值的时候，引用计数会加1。 所以即使dealloc的时候，执行[ _ property release]，也会存在内存泄漏。正确的做法是：self.property = [[[NSObject alloc] init] autorelease]; 
+self.property = [[NSObject alloc] init]; 
+
+NSObject * a = [[NSObject alloc] init];
+self.property = a;
+[a release];
+这里因为执行了一次临时变量的release，所以就不会出现内存泄漏问题。
+```
+在ARC下，则无需考虑这两个返回值的区别。Runtime有对Autorelease返回值进行优化。在ARC下，编译器会在返回值使用objc_autoreleaseReturnValue()代替调用autorelease，使用的时候会使用objc_retainAutoreleaseAReturnValue()代替调用retain，最后释放的时候会使用objc_storeStrong()代替release。比如
+```
++ (instancetype)createSark {
+    return [self new];
+}
+// caller
+Sark * sark = [Sark createSark];
+//runtime中变成：
++ (instancetype)createSark {
+    id tmp = [self new];
+    return objc_autoreleaseReturnValue(tmp); // 代替我们调用autorelease
+}
+// caller
+id tmp = objc_retainAutoreleasedReturnValue([Sark createSark]) // 代替我们调用retain
+Sark * sark = tmp;
+objc _ storeStrong(&sark, nil); // 相当于代替我们调用了release
+```
+其次使用了objc_autoreleaseReturnValue方法时，runtime会将返回值存储到TLS(线程局部存储器)中，objc_retainAutoreleasedReturnValue则直接去TLS中取出对象。将TLS作为一个中转站来使用了。
+
+* autorelease 对象赋值给weak对象，是否会立即释放？
+不会，这种情况会通过objc_loadweak把对象注册到AutoreleasePool中，以延长生命周期。比如：
+```
+NSNumber  _  weak * number = [NSNumber numberWithInt:100];
+NSLog(@"number = %@", number); //这里是可以打印出来的
+```
+
+  
 
 
 ### 锁与多线程
